[package]
name = "off-chain-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
solana-client = "1.7"
solana-sdk = "1.7"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.188", features = [] }
